[package]
name = "rizon-lang-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
rizon-frontend = { git = "https://github.com/MartinVacheron/rizon-lang" }
rizon-static-analysis = { git = "https://github.com/MartinVacheron/rizon-lang" }
rizon-tools = { git = "https://github.com/MartinVacheron/rizon-lang" }